--- a/pages/Solus.html
+++ b/pages/Solus.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
-        <title>Linux/Unix Distro Ratings SmartOS</title>
+        <title>Linux/Unix Distro Ratings Solus</title>
 
         <link rel="stylesheet" href="/css/minimal.css">
         <meta name="viewport" content="width=device-width">
@@ -390,25 +390,18 @@
                 on 2019-05-12 13:44:47 +0300 with Markdown engine kramdown (1.16.2)
                   using options {}
   -->
-<h1 id="smartos">SmartOS</h1>
-<p><a href="https://www.joyent.com/smartos" title="SmartOS"><img src="/images/smartos.png" alt="SmartOS" /></a></p>
+<h1 id="unpopulated-distro-page">Unpopulated distro page</h1>
 
-<h3 id="rank-29">Rank: #29</h3>
+<h3 id="rank-32">Rank: #32</h3>
 
-<h3 id="website-httpswwwjoyentcomsmartos1">Website: <a href="https://www.joyent.com/smartos" title="SmartOS">https://www.joyent.com/smartos</a></h3>
+<h3 id="website-unpopulated-yet">Website: unpopulated yet</h3>
 
 <h3 id="irc">IRC:</h3>
-<p>#smartos on Freenode with 146 users online</p>
+<p>#Solus on Freenode with 122 users online</p>
 
 <h3 id="description">Description</h3>
-<p>SmartOS is a free and open-source SVR4 hypervisor, based on the UNIX operating system that combines OpenSolaris technology with Linux’s KVM virtualization. Its core kernel contributed to illumos project. It features several technologies: Crossbow, DTrace, KVM, ZFS, and Zones. Unlike other illumos distributions, SmartOS employs NetBSD pkgsrc package management. SmartOS is designed to be particularly suitable for building clouds and generating appliances. It is developed for and by Joyent, but is open-source and free for anyone to use.</p>
-
-<p>SmartOS is an in-memory operating system and boots directly into random access memory. It supports various boot mechanisms such as booting from USB thumbdrive, ISO Image, or over the network via PXE boot. One of the many benefits of employing this boot mechanism is that operating system upgrades are trivial, simply requiring a reboot from a newer SmartOS image version.</p>
-
-<p>SmartOS follows a strict local node storage architecture. This means that virtual machines are stored locally on each node and do not boot over the network from a central SAN or NAS. This helps ensure that network latency issues are eliminated as well as to preserve node independence. Multi-node SmartOS clouds can be managed via the open-source Joyent SmartDataCenter (SDC) cloud orchestration suite or via the Project Fifo Open Source SmartOS Cloud management platform built on Erlang.</p>
-
-<p>SmartOS has several types of zones, also referred to as containers. The typical zone is UNIX, using pkgsrc as a package manager. KVM, which allows running arbitrary other operating systems using hardware virtualization, also runs inside a zone, albeit with minimal privileges to further increase security. Another type is LX, which can run many different popular Linux distributions without the overhead of KVM, by supporting the Linux syscall table.</p>
-
+<p>This distro page is not populated yet. Please create an appropriate distro markdown file with official description of distribution and submit pull request.
+Remember that this website is entirely community effort so please help make it better.</p>
 <!-- === end markdown block === -->
 
             </section>
